# mantis

./: .gitignore  config.example.yaml  pyproject.toml  start.sh  unwind_positions.py
mantis/: __init__.py  backtest.py  backtest_gt.py  collector.py  config.py  db.py  engine.py  game_theory.py  main.py  paper_trader.py  polymarket_client.py  report.py  risk.py  scanner.py  strategy_log.py  types.py
reports/: architecture.mmd  real_backtest_results.json  real_data_analysis_2026-04-06.txt  scan_2026-04-06.txt
scripts/: bulk_data_fetcher.py  calibrate_backtest.py  expanded_backtest.py  gt_chart.py  pro_backtest.py  quick_backtest.py  real_data_backtest.py  realistic_backtest.py  realistic_quick_backtest.py
